# EvalEngine

./: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  railway.json  tsconfig.base.json  turbo.json  vercel.json
apps/ai/: .env.example  pyproject.toml  requirements.txt
apps/ai/app/: main.py
apps/ai/app/core/: config.py  logging.py  security.py
apps/ai/app/models/: analysis.py  embedding.py  explanation.py  output_format.py  scoring.py  similarity.py
apps/ai/app/routers/: analysis.py  embedding.py  explanation.py  output_format.py  scoring.py  similarity.py  suggest.py
apps/ai/app/services/: analysis_service.py  embedding_service.py  explanation_service.py  output_format_service.py  scoring_service.py  similarity_service.py
apps/api/: .env.example  Dockerfile  package.json  tsconfig.json
apps/api/src/: app.controller.ts  app.module.ts  main.ts
apps/api/src/modules/auth/: auth.module.ts  (+2 more)
apps/web/: .env.example  Dockerfile  middleware.ts  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
apps/web/actions/: api-key.actions.ts  model-builder.actions.ts  model.actions.ts  project.actions.ts  tenant.actions.ts  user.actions.ts
apps/web/app/: globals.css  layout.tsx  page.tsx  providers.tsx
apps/web/app/(dashboard)/: layout.tsx
apps/web/app/(portal)/: layout.tsx
apps/web/app/(standalone)/: layout.tsx
apps/web/components/charts/: score-radar.tsx
apps/web/components/layout/: header.tsx  portal-sidebar.tsx  sidebar.tsx
apps/web/lib/: api-client.ts  auth.ts  utils.ts
docker/: docker-compose.yml
(+91 files in other folders)
