[project]
name = "evalengine-ai"
version = "0.1.0"
description = "EvalEngine AI analysis service"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "openai>=1.35.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "numpy>=1.26.0",
    "httpx>=0.27.0",
    "python-jose[cryptography]>=3.3.0",
    "structlog>=24.2.0",
]

[build-system]
requires = ["setuptools>=70.0.0"]
build-backend = "setuptools.backends.legacy:build"
